--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         google()
         mavenLocal()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 
     configurations.all {
