--- a/awm-example/build.gradle
+++ b/awm-example/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.3'
-    implementation 'com.github.compscidr:awm:master-SNAPSHOT'
+    implementation project(path: ':awm')
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
