--- a/awm/src/main/AndroidManifest.xml
+++ b/awm/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
     <application>
         <activity
             android:name="com.jasonernst.awm.collectors.BluetoothStatsCollector$BluetoothEnableActivity"
-            android:label="Enable Bluetooth"/>
+            android:label="Enable Bluetooth"
+            android:exported="true"/>
         <!--<meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />-->
