--- a/awm/src/main/AndroidManifest.xml
+++ b/awm/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.jasonernst.awm">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
