--- a/awm-server/docker-compose.yml
+++ b/awm-server/docker-compose.yml
@@ -26,3 +26,9 @@ services:
       - 80:80
     depends_on:
       - mysql
+    environment:
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MAPS_KEY=${MAPS_KEY}
