--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -91,6 +91,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':awm-common')
     implementation 'androidx.test:monitor:1.4.0'
     def multidex_version = "2.0.1"
     def room_version = "2.3.0"
