--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.1.0'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.8.2.0"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
         classpath "com.hiya:jacoco-android:0.2"
@@ -40,11 +40,11 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
+        testInstrumentationRunnerArguments runnerBuilder: 'de.mannodermaus.junit5.AndroidJUnit5Builder'
         testInstrumentationRunnerArguments
         minSdkVersion 19
         targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunnerArgument "runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder"
         multiDexEnabled true
         javaCompileOptions {
             annotationProcessorOptions {
@@ -53,16 +53,6 @@ android {
         }
     }
 
-    lintOptions {
-        abortOnError false
-        warningsAsErrors false
-        showAll true
-        explainIssues true
-        xmlOutput file("build/reports/lint/report.xml")
-        htmlOutput file("build/reports/lint/report.html")
-        disable "UnsafeExperimentalUsageError",
-                "UnsafeExperimentalUsageWarning"
-    }
 
     buildTypes {
         release {
@@ -87,6 +77,15 @@ android {
             includeAndroidResources = true
             returnDefaultValues = true
         }
+    }
+    lint {
+        abortOnError false
+        disable 'UnsafeExperimentalUsageError', 'UnsafeExperimentalUsageWarning'
+        explainIssues true
+        htmlOutput file('build/reports/lint/report.html')
+        showAll true
+        warningsAsErrors false
+        xmlOutput file('build/reports/lint/report.xml')
     }
 }
 
