refactor to use gson instead of homebrew json serialization

--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -127,6 +127,9 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
+    //serialization
+    implementation 'com.google.code.gson:gson:2.8.9'
+
     //logging
     testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
     testAnnotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
