--- a/awm/pom.xml
+++ b/awm/pom.xml
@@ -19,6 +19,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>androidx.test</groupId>
+      <artifactId>monitor</artifactId>
+      <version>1.5.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>androidx.multidex</groupId>
       <artifactId>multidex</artifactId>
       <version>2.0.1</version>
@@ -33,7 +39,7 @@
     <dependency>
       <groupId>com.google.android.gms</groupId>
       <artifactId>play-services-location</artifactId>
-      <version>18.0.0</version>
+      <version>19.0.1</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
@@ -45,7 +51,13 @@
     <dependency>
       <groupId>androidx.room</groupId>
       <artifactId>room-runtime</artifactId>
-      <version>2.3.0</version>
+      <version>2.4.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
