--- a/awm-server/docker-compose.yml
+++ b/awm-server/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: mysql-server-80
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    env_file: .env
     volumes:
       - ./wireless_stats.sql:/docker-entrypoint-initdb.d/schema.sql
 
@@ -20,8 +21,9 @@ services:
     container_name: php-72
     build:
       context: .
+      target: app
     volumes:
-      - ./source:/var/www/html
+      - ./src:/var/www/html
     ports:
       - 80:80
     depends_on:
