--- a/awm-server/Dockerfile
+++ b/awm-server/Dockerfile
@@ -1,3 +1,4 @@
+# https://www.digitalocean.com/community/tutorials/how-to-containerize-a-laravel-application-for-development-with-docker-compose-on-ubuntu-18-04
 FROM php:8.1-apache as base
 RUN docker-php-ext-install pdo pdo_mysql mysqli && a2enmod rewrite
 RUN apt-get update && apt-get install wget
@@ -9,8 +10,10 @@ RUN wget https://raw.githubusercontent.com/composer/getcomposer.org/76a7060ccb93
 FROM base as app
 # copy the app
 WORKDIR /var/www/html
-COPY src/ /var/www/html/
+COPY . /var/www/html/
 EXPOSE 80
+RUN composer install
+# CMD ["php artisan serve --host 0.0.0.0"]
 
 FROM base as test
 # git seems to be required for phpunit
