--- a/awm-server/template.env
+++ b/awm-server/template.env
@@ -5,3 +5,9 @@ MYSQL_DATABASE=wireless_stats
 MYSQL_USER=insertuser
 MYSQL_PASSWORD=insertpass
 MAPS_KEY=insertmapskey
+
+APP_NAME=awm-server
+APP_ENV=dev                                                        
+APP_KEY=
+APP_DEBUG=true
+APP_URL=http://localhost
