--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build tests
         uses: docker/build-push-action@v2
         with:
-          context: awm-sever
+          context: awm-server
           target: test
           push: false
           load: true
@@ -52,7 +52,7 @@ jobs:
       - name: Build lint
         uses: docker/build-push-action@v2
         with:
-          context: awm-sever
+          context: awm-server
           target: check
           push: false
           load: true
