--- a/awm-server/Dockerfile
+++ b/awm-server/Dockerfile
@@ -1,24 +1,35 @@
 # https://www.digitalocean.com/community/tutorials/how-to-containerize-a-laravel-application-for-development-with-docker-compose-on-ubuntu-18-04
-FROM php:8.1-apache as base
-RUN docker-php-ext-install pdo pdo_mysql mysqli && a2enmod rewrite
+FROM php:8.1-fpm as base
 
 # git and unizp required for composer to install stuff it seems
-RUN apt-get update && apt-get install --no-install-recommends -y wget git unzip
+RUN apt-get update && apt-get install --no-install-recommends -y wget git unzip libonig-dev libpng-dev
 
-# get composer
+# Clear cache
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Install PHP extensions
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+
+# Get latest Composer
 WORKDIR /tmp
 RUN wget https://raw.githubusercontent.com/composer/getcomposer.org/76a7060ccb93902cd7576b67264ad91c8a2700e2/web/installer -O - -q | php -- --quiet && mv composer.phar /usr/local/bin/composer
 
 FROM base as app
 
-# copy the app
-WORKDIR /var/www/html
-COPY . /var/www/html/
-EXPOSE 80
-RUN composer install
+# Arguments defined in docker-compose.yml
+ARG user
+ARG uid
 
-# this will listen on port 8000 by default
-CMD ["php artisan serve --host 0.0.0.0"]
+# copy the app
+# Create system user to run Composer and Artisan Commands
+RUN useradd -G www-data,root -u $uid -d /home/$user $user
+RUN mkdir -p /home/$user/.composer && \
+    chown -R $user:$user /home/$user
+
+WORKDIR /var/www/html
+COPY . /var/www/html
+EXPOSE 80
+RUN composer install && php artisan storage:link && php artisan key:generate && php artisan config:cache
 
 FROM base as test
 
