--- a/awm-server/template.env
+++ b/awm-server/template.env
@@ -1,9 +1,12 @@
 # copy this file to .env and then run `docker-compose up`
-MYSQL_HOST=mysql-server-80
+DB_CONNECTION=mysql
+DB_HOST=awm-sql
+DB_PORT=3306
+DB_DATABASE=awm
+DB_USERNAME=insertuser
+DB_PASSWORD=insertpass
+
 MYSQL_ROOT_PASSWORD=insertrootpass
-MYSQL_DATABASE=wireless_stats
-MYSQL_USER=insertuser
-MYSQL_PASSWORD=insertpass
 MAPS_KEY=insertmapskey
 
 APP_NAME=awm-server
