--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:8.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:10.4.0" // add this line
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
