--- a/awm/build.gradle
+++ b/awm/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     // optional - RxJava2 support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
     // optional - RxJava3 support for Room
