--- a/awm-server/build.gradle
+++ b/awm-server/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'application'
     id 'org.jetbrains.kotlin.jvm'
     id 'kotlinx-serialization'
+    id("io.quarkus") version "3.6.7"
 }
 
 kotlin {
@@ -17,5 +18,14 @@ dependencies {
     api "org.slf4j:slf4j-api:$slf4j_version"
     implementation "ch.qos.logback:logback-classic:1.5.3"
     implementation project(path: ':awm-common')
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2"
+
+    implementation(enforcedPlatform("io.quarkus:quarkus-bom:3.6.7"))
+    implementation("io.quarkus:quarkus-kotlin")
+    implementation("io.quarkus:quarkus-reactive-routes")
+    implementation("io.quarkus:quarkus-resteasy-reactive")
+    implementation("io.quarkus:quarkus-resteasy-reactive-qute")
+    implementation("io.quarkus:quarkus-hibernate-orm-panache-kotlin")
+    implementation("io.quarkus:quarkus-jdbc-postgresql")
+    implementation("io.quarkus:quarkus-flyway")
 }
