--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         android_logback = '3.0.0'
         logback_classic = "1.4.7"
         room_version = '2.6.1'
+        quarkus_version = '3.10.0'
     }
     repositories {
         google()
