--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,8 +44,8 @@ preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = 
 quarkus-bom = { module = "io.quarkus:quarkus-bom", version.ref = "quarkus" }
 quarkus-kotlin = { module = "io.quarkus:quarkus-kotlin", version.ref = "quarkus" }
 quarkus-reactive-routes = { module = "io.quarkus:quarkus-reactive-routes"}
-quarkus-resteasy-reactive = { module = "io.quarkus:quarkus-resteasy-reactive"}
-quarkus-resteasy-reactive-qute = { module = "io.quarkus:quarkus-resteasy-reactive-qute"}
+quarkus-rest = { module = "io.quarkus:quarkus-rest"}
+quarkus-rest-qute = { module = "io.quarkus:quarkus-rest-qute"}
 quarkus-hibernate-orm-panache-kotlin = { module = "io.quarkus:quarkus-hibernate-orm-panache-kotlin" }
 quarkus-jdbc-postgresql = { module = "io.quarkus:quarkus-jdbc-postgresql" }
 quarkus-flyway = { module = "io.quarkus:quarkus-flyway" }
@@ -69,7 +69,7 @@ ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 
 [bundles]
 room = ["room-runtime", "room-ktx", "room-guava", "room-paging", "room-rxjava2", "room-rxjava3"]
-quarkus = ["quarkus-kotlin", "quarkus-reactive-routes", "quarkus-resteasy-reactive", "quarkus-resteasy-reactive-qute", "quarkus-hibernate-orm-panache-kotlin", "quarkus-jdbc-postgresql", "quarkus-flyway"]
+quarkus = ["quarkus-kotlin", "quarkus-reactive-routes", "quarkus-rest", "quarkus-rest-qute", "quarkus-hibernate-orm-panache-kotlin", "quarkus-jdbc-postgresql", "quarkus-flyway"]
 
 [plugins]
 allopen = { id = "org.jetbrains.kotlin.plugin.allopen", version.ref = "kotlin" }
