Update to SDK 35 as required by the dep update

--- a/awm-android/build.gradle
+++ b/awm-android/build.gradle
@@ -6,14 +6,16 @@ plugins {
 
 android {
     namespace "com.github.compscidr.awm"
-    compileSdk = 34
+    compileSdk = 35
 
     defaultConfig {
         minSdk = 21
-        targetSdk = 34
+        targetSdk = 35
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        buildConfig = true
+    }
     buildTypes {
         release {
             proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
