--- a/awm-android/build.gradle
+++ b/awm-android/build.gradle
@@ -4,6 +4,15 @@ plugins {
     alias(libs.plugins.ksp)
 }
 
+kotlin {
+    jvmToolchain(17)
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 android {
     namespace "com.github.compscidr.awm"
     compileSdk = 35
