--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,10 @@ core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 ext-junit = { module = "androidx.test.ext:junit", version.ref = "junit-version" }
 junit = { module = "junit:junit", version.ref = "junit" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api" }
+junit-bom = { module = "org.junit:junit-bom", version="5.12.0" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
+junit-jupiter-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin-reflect" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-viewmodel-compose" }
@@ -39,6 +43,7 @@ logback-android = { module = "com.github.tony19:logback-android", version.ref = 
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 material3 = { module = "androidx.compose.material3:material3" }
+mockk = { module = "io.mockk:mockk", version = "1.13.16" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "play-services-location" }
 preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = "preference-ktx" }
 quarkus-bom = { module = "io.quarkus:quarkus-bom", version.ref = "quarkus" }
@@ -49,7 +54,6 @@ quarkus-rest-qute = { module = "io.quarkus:quarkus-rest-qute"}
 quarkus-hibernate-orm-panache-kotlin = { module = "io.quarkus:quarkus-hibernate-orm-panache-kotlin" }
 quarkus-jdbc-postgresql = { module = "io.quarkus:quarkus-jdbc-postgresql" }
 quarkus-flyway = { module = "io.quarkus:quarkus-flyway" }
-
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room-runtime" }
 room-guava = { module = "androidx.room:room-guava", version.ref = "room-runtime" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room-runtime" }
@@ -70,6 +74,8 @@ ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 [bundles]
 room = ["room-runtime", "room-ktx", "room-guava", "room-paging", "room-rxjava2", "room-rxjava3"]
 quarkus = ["quarkus-kotlin", "quarkus-reactive-routes", "quarkus-rest", "quarkus-rest-qute", "quarkus-hibernate-orm-panache-kotlin", "quarkus-jdbc-postgresql", "quarkus-flyway"]
+test = ["junit-jupiter-api", "mockk"]
+test-runtime = ["junit-jupiter-engine", "junit-jupiter-platform-launcher"]
 
 [plugins]
 allopen = { id = "org.jetbrains.kotlin.plugin.allopen", version.ref = "kotlin" }
